# yzq

./: .gitignore  nomachine.deb  tatus  test_rs_frames.py
install/fastlio_to_px4/share/fastlio_to_px4/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fastlio_to_px4/share/fastlio_to_px4/cmake/: fastlio_to_px4Config.cmake
install/fastlio_to_px4/share/fastlio_to_px4/launch/: fastlio_to_px4.launch.py
install/mission_bringup_pkg/share/mission_bringup_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mission_bringup_pkg/share/mission_bringup_pkg/launch/: mission_full.launch.py
install/offboard_core_pkg/share/offboard_core_pkg/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/cloud_self_filter_pkg/: CMakeLists.txt  package.xml
src/cloud_self_filter_pkg/config/: cloud_self_filter.yaml
src/cloud_self_filter_pkg/launch/: cloud_self_filter.launch.py
src/cloud_self_filter_pkg/src/: cloud_self_filter_node.cpp
src/custom_vision_msgs/: CMakeLists.txt  package.xml
src/custom_vision_msgs/msg/: PositionTargetArray.msg  ServoTarget.msg  ServoTargetArray.msg
src/ego_2d_planner_pkg/: CMakeLists.txt  README.md  package.xml
src/ego_2d_planner_pkg/config/: ego_2d_planner.yaml
src/ego_2d_planner_pkg/include/ego_2d_planner_pkg/bspline_opt/: bspline_optimizer_2d.hpp  uniform_bspline_2d.hpp
src/ego_2d_planner_pkg/include/ego_2d_planner_pkg/common/: types.hpp
src/ego_2d_planner_pkg/include/ego_2d_planner_pkg/path_searching/: astar_2d.hpp
src/ego_2d_planner_pkg/include/ego_2d_planner_pkg/plan_env/: grid_map_2d.hpp
src/ego_2d_planner_pkg/include/ego_2d_planner_pkg/plan_manage/: planner_manager_2d.hpp
src/ego_2d_planner_pkg/launch/: ego_2d_planner.launch.py
src/ego_2d_planner_pkg/msg/: Bspline2D.msg
src/ego_2d_planner_pkg/rviz/: ego_2d_planner.rviz
src/ego_2d_planner_pkg/src/bspline_opt/: bspline_optimizer_2d.cpp  uniform_bspline_2d.cpp
src/ego_2d_planner_pkg/src/path_searching/: astar_2d.cpp
src/ego_2d_planner_pkg/src/plan_env/: grid_map_2d.cpp
src/ego_2d_planner_pkg/src/plan_manage/: ego_replan_fsm_2d_node.cpp  planner_manager_2d.cpp  traj_server_2d_node.cpp
src/extrinsic_calib_pkg/: CMakeLists.txt  package.xml
src/extrinsic_calib_pkg/include/extrinsic_calib_pkg/: svd_solver.hpp
src/extrinsic_calib_pkg/src/: extrinsic_calib_node.cpp
src/fastlio_to_px4/: CMakeLists.txt
src/fastlio_to_px4/include/fastlio_to_px4/: frame_conversion.hpp
src/fastlio_to_px4/src/: fastlio_to_px4_node.cpp
src/ground_station_bridge_pkg/: CMakeLists.txt  README.md  package.xml
src/ground_station_bridge_pkg/include/ground_station_bridge_pkg/: ground_station_bridge_node.hpp  protocol.hpp  serial_port.hpp  telemetry_data.hpp  udp_ground_station_bridge_node.hpp
src/ground_station_bridge_pkg/launch/: ground_station_bridge.launch.py
src/ground_station_bridge_pkg/src/: ground_station_bridge_node.cpp  main.cpp  protocol.cpp  serial_port.cpp  udp_ground_station_bridge_main.cpp  udp_ground_station_bridge_node.cpp
src/offboard_core_pkg/: CMakeLists.txt  package.xml
src/offboard_core_pkg/config/: ego_goto.yaml
src/offboard_core_pkg/include/offboard_core_pkg/: context.hpp  grid.hpp  itask.hpp  math_tool.hpp  px4_iface.hpp  scheduler.hpp  tasks.hpp
src/offboard_core_pkg/include/offboard_core_pkg/helpers/: tsp_helper.hpp
src/offboard_core_pkg/include/offboard_core_pkg/planners/: a_star_goto_task.hpp  a_star_planner.hpp  ego_vel_planner.hpp  min_snap_planner.hpp  tsp_min_snap_planner.hpp  tsp_planner.hpp
src/offboard_core_pkg/include/offboard_core_pkg/tasks/: disarm_task.hpp  ego_goto_task.hpp  ego_vel_follow_task.hpp  fixed_xy_goto_task.hpp  front_pre_align_task.hpp  go_to_task.hpp  grid_goto_dwell_task.hpp  grid_goto_dwell_task.hpp.tsp_hold_bak  home_stabilize_task.hpp  hover_task.hpp  land_45_task.hpp  multi_locked_task.hpp  return_home_task.hpp  set_offboard_task.hpp  snake_grid_task.hpp  snake_traverse_task.hpp  start_down_blind_check_task.hpp  trajectory_task.hpp  tsp_grid_task.hpp  tsp_grid_task.hpp.recognize_bak  tsp_grid_task.hpp.tsp_hold_bak  yaw_spin2_task.hpp  yaw_spin_task.hpp
src/offboard_core_pkg/include/offboard_core_pkg/utils/: mcu_serial_switch.hpp
src/offboard_core_pkg/src/: grid.cpp
src/offboard_core_pkg/src/nodes/: d_advance.cpp  offboard_mission1.cpp  offboard_test0.cpp  offboard_test1.cpp  offboard_test2.cpp  offboard_test3.cpp  offboard_test4.cpp  snake_test.cpp  trajectory_test.cpp  yaw_spin_test.cpp
src/offboard_core_pkg/src/planners/: min_snap_planner.cpp  tsp_min_snap_planner.cpp
src/offboard_core_pkg/src/tasks/: arm_task.cpp  disarm_task.cpp  ego_goto_task.cpp  front_pre_align_task.cpp  go_to_task.cpp  grid_goto_dwell_task.cpp  grid_goto_dwell_task.cpp.tsp_hold_bak  home_stabilize_task.cpp  hover_task.cpp  multi_locked_task.cpp  presetpoint_task.cpp  px4_land_mode_task.cpp  return_home_task.cpp  set_offboard_task.cpp  snake_grid_task.cpp  snake_traverse_task.cpp  start_down_blind_check_task.cpp  takeoff_task.cpp  trajectory_task.cpp  tsp_grid_task.cpp  tsp_grid_task.cpp.recognize_bak  tsp_grid_task.cpp.tsp_hold_bak  wait_home_task.cpp  yaw_spin2_task.cpp  yaw_spin_task.cpp
src/offboard_core_pkg/src/utils/: mcu_serial_switch.cpp
src/offboard_pkg/: CMakeLists.txt
src/offboard_pkg/src/: offboard_1m.cpp
src/px4_debug_recorder/: CMakeLists.txt  package.xml
src/px4_debug_recorder/launch/: debug_recorder.launch.py
src/px4_debug_recorder/src/: debug_recorder_node.cpp
src/trajectory_generator_pkg/: CMakeLists.txt
src/trajectory_generator_pkg/include/trajectory_generator_pkg/: generator.hpp
src/trajectory_generator_pkg/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/trajectory_generator_pkg/install/trajectory_generator_pkg/share/trajectory_generator_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
src/trajectory_generator_pkg/log/: latest_build
src/trajectory_generator_pkg/src/: generator.cpp  trajectory_node.cpp
(+94 files in other folders)
