<?xml version="1.0"?>
<package format="3">
  <name>cloud_self_filter_pkg</name>
  <version>0.0.1</version>
  <description>PointCloud self/noise filter for FAST-LIO2 and PX4 planning</description>

  <maintainer email="451943987@qq.com">yzq</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>pcl_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
