<?xml version="1.0"?>
<package format="3">
  <name>ego_2d_planner_pkg</name>
  <version>0.3.0</version>
  <description>EGO-style 2D planner for FAST-LIO2 point clouds with true 2D B-spline trajectory message and /position_cmd trajectory server.</description>
  <maintainer email="user@example.com">yzq</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>quadrotor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
