<?xml version="1.0"?>
<package format="3">
  <name>ground_station_bridge_pkg</name>
  <version>0.0.2</version>
  <description>ROS2 bridge package for Jetson ground-station serial communication</description>

  <maintainer email="yzq@example.com">yzq</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>ground_station_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
