<?xml version="1.0"?>
<package format="3">
  <name>px4_debug_recorder</name>
  <version>0.0.1</version>
  <description>Lightweight PX4 debug recorder</description>
  <maintainer email="you@example.com">yzq</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
