<?xml version="1.0"?>
<package format="3">
  <name>fastlio_to_px4</name>
  <version>0.0.1</version>
  <description>Bridge FAST-LIO2 Odometry to PX4 VehicleOdometry</description>

  <maintainer email="yzq@example.com">yzq</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>px4_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>