<?xml version="1.0"?>
<package format="3">
  <name>mission_bringup_pkg</name>
  <version>0.0.0</version>
  <description>Mission bringup package for launching full system and offboard node</description>

  <maintainer email="jetson@todo.todo">jetson</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>bringup_pkg</exec_depend>
  <exec_depend>offboard_core_pkg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>