<?xml version="1.0"?>
<package format="3">
  <name>offboard_core_pkg</name>
  <version>0.0.1</version>
  <description>PX4 ROS2 offboard task framework package</description>

  <maintainer email="you@example.com">yzq</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>nlohmann_json</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>